force-app/main/default/Objects/BuyerPersona__c/BuyerPersona__c.object-meta.xml
<CustomObject>
    <description>A buyer persona describes a specific type of customer. It provides demographic traits like their role and company and includes psychological traits like motivations and challenges. Sellers create buyer personas using data, research, and interviews — and use them to determine whether a customer is the right fit for their product or service.</description>
    <label>Buyer Persona</label>
    <nameField>
        <displayFormat>BP{000}</displayFormat>
        <label>Buyer Persona Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>