force-app/main/default/Objects/BuyerPersona__c/fields/BuyerPersonaType__c.field-meta.xml
<CustomField>
    <fullName>BuyerPersonaType__c</fullName>
    <description>Type describes whether a buyer is closer to the &quot;ideal&quot; or not.  A positive buyer persona describes personas who are an ideal customer, which means they are motivated and more likely to purchase your product or service. A negative buyer persona describes personas who aren’t great fits for your solution, which means they’re more likely to be difficult to work with, end the relationship early, or not buy altogether.</description>
    <label>Buyer Persona Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>