force-app/main/default/Objects/BuyerPersona__c/fields/Daily_responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Daily_responsibilities__c</fullName>
    <label>Daily responsibilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>