force-app/main/default/Objects/BuyerPersona__c/fields/How_Success_Is_Defined__c.field-meta.xml
<CustomField>
    <fullName>How_Success_Is_Defined__c</fullName>
    <label>How Success Is Defined</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>