force-app/main/default/Objects/BuyerPersona__c/fields/Methods_of_Learning__c.field-meta.xml
<CustomField>
    <fullName>Methods_of_Learning__c</fullName>
    <label>Methods of Learning</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>