force-app/main/default/Objects/BuyerPersona__c/fields/Professional_challenges__c.field-meta.xml
<CustomField>
    <fullName>Professional_challenges__c</fullName>
    <label>Professional challenges</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>