force-app/main/default/Objects/BuyerPersona__c/fields/Skills_Required_For_Success__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required_For_Success__c</fullName>
    <label>Skills Required For Success</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>