force-app/main/default/Objects/BuyerPersona__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BuyerPersonaType__c</columns>
    <columns>Company_Size__c</columns>
    <columns>Industry__c</columns>
    <columns>Role__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>